# agent

./: AGENT_CREATE_IMPLEMENTATION.md  DAG_CREATION_GUIDE.md  Dockerfile  ENV_TEMPLATE  FLUTTER_AGENT_INTEGRATION.md  SERVER_README.md  cube.py  docker-compose.yml  setup_user_project_access.sql  start-server.sh
aider-worker/: .keep  .keep10  .keep11  .keep12  .keep13  .keep2  .keep4  .keep5  .keep6  .keep7  .keep8  .keep9  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_llm_client.py
aider-worker/app/: main.py
aider-worker/app/core/: agent_commands.py  aider_runner.py  auth.py  code_quality_checker.py  concurrency.py  config.py  dag_generator.py  dag_generator.py.backup  dag_naming.py  dag_prompt_templates.py  dag_validation.py  error_handling.py  logging_config.py  metrics.py  repo_manager.py  supabase_io.py  telemetry.py
aider-worker/app/models/: dto.py
aider-worker/db_migrations/: create_dag_table.sql
aider-worker/tests/: test_dag_creation_improvements.py
server/: main.py  requirements.txt
